fix(og): comment-out og tags

--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
         <meta name="theme-color" content="#FF1744">
 
         <!-- Twitter card tags -->
-        <meta name="twitter:card" content="summary_large_image">
+        <!-- <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:site" value="@your-twitter-account-name-here" />
         <meta name="twitter:title" value="example" />
         <meta name="twitter:description" value="example description" />
-        <meta name="twitter:image" content="http://<domain-name-here>.com/og/codinghard-og.png" />
-        <meta name="twitter:image:alt" value="We bring ideas to life for innovators from startups to corporate enterprise. CodingHard.com"/>
+        <meta name="twitter:image" content="http://<domain-name-here>.com/og/image-og.png" />
+        <meta name="twitter:image:alt" value="We bring ideas to life for innovators from startups to corporate enterprise."/> -->
 
         <!-- Facebook open-graph tags -->
-        <meta property="fb:app_id" content=""/>
+        <!-- <meta property="fb:app_id" content=""/>
         <meta property="og:title" content="example" />
         <meta property="og:description" content="example description"/>
         <meta property="og:type" content="Website"/>
         <meta property="og:url" content="https://<domain-name-here>.com"/>
-        <meta property="og:image:url" content="http://<domain-name-here>.com/og/codinghard-og.png"/>
-        <meta property="og:image:secure_url" content="https://<domain-name-here>.com/og/codinghard-og.png"/>
+        <meta property="og:image:url" content="http://<domain-name-here>.com/og/image-og.png"/>
+        <meta property="og:image:secure_url" content="https://<domain-name-here>.com/og/image-og.png"/>
         <meta property="og:image:width" content="1920" />
-        <meta property="og:image:height" content="1280" />
+        <meta property="og:image:height" content="1280" /> -->
 
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <link rel="icon" href="img/favicon/favicon-16.png" sizes="16x16" type="image/png">
